7 Changes are Done

--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
             </div>
         </section>
         <section>
-            <h1 class="text-center text-orange my-3 font-60">New Arrival</h1>
+            <h1 class="text-center text-orange my-3 font-60">New Arrivals</h1>
             <div class="row" id="divNewArrival">
             </div>
         </section>
         <section class="best-seller">
-            <h1 class="text-center text-orange my-3 font-60">Best Seller</h1>
+            <h1 class="text-center text-orange my-3 font-60">Best Sellers</h1>
             <!-- <div class="row" id="divBestSeller">
             </div> -->
             <div id="carouselExample" class="carousel slide">
