--- a/product-page.html
+++ b/product-page.html
@@ -219,10 +219,10 @@
                         <div class=" py-4">
                             <div class="d-flex justify-content-between">
                                 <p class="text-orange font-14 bold text-uppercase">Size(UK):</p>
-                                <p class="text-orange font-14 bold text-uppercase d-flex">SIZE GUIDE&nbsp;&nbsp;
-                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                <!-- <p class="text-orange font-14 bold text-uppercase d-flex">SIZE GUIDE&nbsp;&nbsp; -->
+                                    <!-- <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
-                                        <rect width="20" height="20" rx="10" fill="#DB4834" />
+                                        <rect width="20" height="20" rx="10" fill="#DB4834" /> -->
                                         <g clip-path="url(#clip0_312_1171)">
                                             <path
                                                 d="M9.44078 11.3915C9.44078 11.129 9.48203 10.8965 9.56453 10.694C9.65453 10.4915 9.76328 10.3115 9.89078 10.154C10.0258 9.99648 10.1683 9.85023 10.3183 9.71523C10.4683 9.58023 10.607 9.45273 10.7345 9.33273C10.8695 9.20523 10.9783 9.07398 11.0608 8.93898C11.1508 8.80398 11.1958 8.65398 11.1958 8.48898C11.1958 8.21898 11.0833 8.00148 10.8583 7.83648C10.6408 7.67148 10.3483 7.58898 9.98078 7.58898C9.62828 7.58898 9.31328 7.66398 9.03578 7.81398C8.75828 7.95648 8.52953 8.15898 8.34953 8.42148L6.98828 7.62273C7.28828 7.16523 7.70453 6.80148 8.23703 6.53148C8.76953 6.25398 9.41453 6.11523 10.172 6.11523C10.7345 6.11523 11.2295 6.19773 11.657 6.36273C12.0845 6.52023 12.4183 6.75273 12.6583 7.06023C12.9058 7.36773 13.0295 7.74648 13.0295 8.19648C13.0295 8.48898 12.9845 8.74773 12.8945 8.97273C12.8045 9.19773 12.6883 9.39273 12.5458 9.55773C12.4033 9.72273 12.2495 9.87648 12.0845 10.019C11.927 10.1615 11.777 10.3002 11.6345 10.4352C11.492 10.5702 11.372 10.7127 11.2745 10.8627C11.1845 11.0127 11.1395 11.189 11.1395 11.3915H9.44078ZM10.2958 14.2152C9.98078 14.2152 9.72203 14.114 9.51953 13.9115C9.31703 13.709 9.21578 13.469 9.21578 13.1915C9.21578 12.9065 9.31703 12.6702 9.51953 12.4827C9.72203 12.2877 9.98078 12.1902 10.2958 12.1902C10.6183 12.1902 10.877 12.2877 11.072 12.4827C11.2745 12.6702 11.3758 12.9065 11.3758 13.1915C11.3758 13.469 11.2745 13.709 11.072 13.9115C10.877 14.114 10.6183 14.2152 10.2958 14.2152Z"
@@ -362,7 +362,7 @@
             <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
         </section>
         <section class="py-5">
-            <h1 class="text-center text-orange my-3 font-60">Similar Product</h1>
+            <h1 class="text-center text-orange my-3 font-60">Similar Products</h1>
 
             <div class="row g-0" id="divSimilarProductList">
 
