--- a/checkout.html
+++ b/checkout.html
@@ -189,6 +189,10 @@
                               <input type="text" class="form-control" id="validationDefault05" required>
                             </div>
                             <div class="col-12">
+                                <label for="validationDefault05" class="form-label">Pincode*</label>
+                                <input type="text" class="form-control" id="validationDefault05" required>
+                              </div>
+                            <div class="col-12">
                               <label for="validationDefault06" class="form-label">Phone Number*</label>
                               <input type="text" class="form-control" id="validationDefault06" required>
                             </div>
@@ -197,12 +201,12 @@
                                 <input type="text" class="form-control" id="validationDefault07" required>
                               </div>
                             <div class="col-12">
-                              <div class="form-check">
+                              <!-- <div class="form-check">
                                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
                                 <label class="form-check-label" for="invalidCheck2">
                                     Save this information for faster check-out next time
                                 </label>
-                              </div>
+                              </div> -->
                             </div>
                         </form>
                     </div>
