metting changes and api changes

--- a/checkout.html
+++ b/checkout.html
@@ -169,36 +169,36 @@
                         <h4 class="text-orange bold font-35 mb-0 mb-lg-4">Billing Details</h4>
                         <form class="row g-3 my-3">
                             <div class="col-12">
-                              <label for="validationDefault01" class="form-label">First Name*</label>
-                              <input type="text" class="form-control" id="validationDefault01" value="" required>
+                              <label for="txtFirstName" class="form-label">First Name*</label>
+                              <input type="text" class="form-control" id="txtFirstName" value="" required>
                             </div>
                             <div class="col-12">
-                              <label for="validationDefault02" class="form-label">Last name*</label>
-                              <input type="text" class="form-control" id="validationDefault02" value="" required>
+                              <label for="txtLastName" class="form-label">Last name*</label>
+                              <input type="text" class="form-control" id="txtLastName" value="" required>
                             </div>
                             <div class="col-12">
-                                <label for="validationDefault03" class="form-label">Street Address*</label>
-                                <textarea type="text" class="form-control" id="validationDefault03" rows="2"></textarea>
+                                <label for="txtAddress" class="form-label">Street Address*</label>
+                                <textarea type="text" class="form-control" id="txtAddress" rows="2"></textarea>
                             </div>
                             <div class="col-12">
-                                <label for="addressDetailsOptional" class="form-label">Apartment, floor, etc. (optional)</label>
-                                <textarea type="text" class="form-control" id="addressDetailsOptional" rows="2"></textarea>
+                                <label for="txtAddress2" class="form-label">Apartment, floor, etc. (optional)</label>
+                                <textarea type="text" class="form-control" id="txtAddress2" rows="2"></textarea>
                             </div>
                             <div class="col-12">
-                              <label for="validationDefault05" class="form-label">Town/City*</label>
-                              <input type="text" class="form-control" id="validationDefault05" required>
+                              <label for="txtCity" class="form-label">Town/City*</label>
+                              <input type="text" class="form-control" id="txtCity" required>
                             </div>
                             <div class="col-12">
-                                <label for="validationDefault05" class="form-label">Pincode*</label>
-                                <input type="text" class="form-control" id="validationDefault05" required>
+                                <label for="txtPin" class="form-label">Pincode*</label>
+                                <input type="text" class="form-control" id="txtPin" required>
                               </div>
                             <div class="col-12">
-                              <label for="validationDefault06" class="form-label">Phone Number*</label>
-                              <input type="text" class="form-control" id="validationDefault06" required>
+                              <label for="txtPhone" class="form-label">Phone Number*</label>
+                              <input type="text" class="form-control" id="txtPhone" required>
                             </div>
                             <div class="col-12">
-                                <label for="validationDefault07" class="form-label">Email Address*</label>
-                                <input type="text" class="form-control" id="validationDefault07" required>
+                                <label for="txtEmail" class="form-label">Email Address*</label>
+                                <input type="text" class="form-control" id="txtEmail" required>
                               </div>
                             <div class="col-12">
                               <!-- <div class="form-check">
