--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </header>
 
     <main>
-        <section class="section__hero carousel slide p-3" id="carouselTopCollection">
+        <section class="section__hero carousel slide p-3 row" id="carouselTopCollection">
             <div class="row carousel-inner p-2" id="divTopCollection">
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselTopCollection" data-bs-slide="prev">
@@ -170,7 +170,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </section>
-        <section class="bg-orange-60 text-white">
+        <section class="bg-orange-60 text-white row">
             <div class="text-center p-5">
                 <h1 class="mb-5">Welcome To The World Of Genuine Leather Shoes</h1>
                 <p class="font-22">Gaitonde Shoes and Accessories Private Limited, manufactures Genuine Leather Shoes and Genuine Leather Accessories under the brand name "Gaitonde". The "Gaitonde" brand has been creating waves in the footwear industry since its inception in 1996</p>
@@ -331,7 +331,7 @@
             imprzd_title_font_size="50"
             imprzd_title_font_weight="700"
             imprzd_button_text="VIEW MORE POSTS"
-            imprzd_button_url="https://gaitonde.com/testimonials.php"
+            imprzd_button_url="testimonials.html"
             imprzd_button_color="#DB4834"
             imprzd_button_border_radius="10px"
             imprzd_button_font="Inter"
