--- a/order-confirm.html
+++ b/order-confirm.html
@@ -199,10 +199,10 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Our&nbsp;Advantage</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Shoes</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Accessories</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Sandals</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Chappals</a>
+                    <a class="nav-link font-12 px-2" >Genuine Leather Shoes</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Accessories</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Sandals</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Chappals</a>
                 </nav>
             </div>
             <div class="col-12 col-lg-2">
@@ -241,9 +241,9 @@
                     <div class="d-flex align-items-center">
                         <p class="text-white mb-0 p-2">
                             Follow Us
-                            <a><img src="wwwroot/images/footer-facebook-icon.svg" alt="facbook-icon"></a>
+                            <a href="https://www.facebook.com/gaitonde.shoe/"><img src="wwwroot/images/footer-facebook-icon.svg"  alt="facbook-icon"></a>
                             <!-- <a><img src="wwwroot/images/footer-twitter-icon.svg" alt="twitter-icon"></a> -->
-                            <a><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
+                            <a href="https://www.instagram.com/gaitonde_shoes/"><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
                         </p>
                     </div>
                     <div>
@@ -258,6 +258,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
