--- a/return-exchange_not_use.html
+++ b/return-exchange_not_use.html
@@ -205,10 +205,10 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Our&nbsp;Advantage</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Shoes</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Accessories</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Sandals</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Chappals</a>
+                    <a class="nav-link font-12 px-2" >Genuine Leather Shoes</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Accessories</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Sandals</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Chappals</a>
                 </nav>
             </div>
             <div class="col-12 col-lg-2">
@@ -247,9 +247,9 @@
                     <div class="d-flex align-items-center">
                         <p class="text-white mb-0 p-2">
                             Follow Us
-                            <a><img src="wwwroot/images/footer-facebook-icon.svg" alt="facbook-icon"></a>
+                            <a href="https://www.facebook.com/gaitonde.shoe/"><img src="wwwroot/images/footer-facebook-icon.svg"  alt="facbook-icon"></a>
                             <!-- <a><img src="wwwroot/images/footer-twitter-icon.svg" alt="twitter-icon"></a> -->
-                            <a><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
+                            <a href="https://www.instagram.com/gaitonde_shoes/"><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
                         </p>
                     </div>
                     <div>
@@ -264,6 +264,7 @@
             </div>
         </div>
     </footer>
+
     <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol"
             merchantdata="MTg="
             imprzd_title_text="Customer Reviews"
