--- a/testimonials.html
+++ b/testimonials.html
@@ -183,10 +183,10 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Our&nbsp;Advantage</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Shoes</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Accessories</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Sandals</a>
-                    <a class="nav-link font-12 px-2" href="#">Genuine Leather Chappals</a>
+                    <a class="nav-link font-12 px-2" >Genuine Leather Shoes</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Accessories</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Sandals</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Chappals</a>
                 </nav>
             </div>
             <div class="col-12 col-lg-2">
@@ -225,9 +225,9 @@
                     <div class="d-flex align-items-center">
                         <p class="text-white mb-0 p-2">
                             Follow Us
-                            <a><img src="wwwroot/images/footer-facebook-icon.svg" alt="facbook-icon"></a>
+                            <a href="https://www.facebook.com/gaitonde.shoe/"><img src="wwwroot/images/footer-facebook-icon.svg"  alt="facbook-icon"></a>
                             <!-- <a><img src="wwwroot/images/footer-twitter-icon.svg" alt="twitter-icon"></a> -->
-                            <a><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
+                            <a href="https://www.instagram.com/gaitonde_shoes/"><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
                         </p>
                     </div>
                     <div>
