--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             imprzd_title_font_color="#DB4834"
             imprzd_title_font_size="50"
             imprzd_title_font_weight="700"
-            imprzd_button_text="VIEW MORE POSTS"
+            imprzd_button_text="View More Posts"
             imprzd_button_url="testimonials.html"
             imprzd_button_color="#DB4834"
             imprzd_button_border_radius="10px"
