--- a/product-page.html
+++ b/product-page.html
@@ -253,8 +253,7 @@
                             <div class="accordion accordion-flush" id="accordionFlushExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button
-                                            class="accordion-button accordion-product border-bottom px-0 font-18 bold collapsed"
+                                        <button class="accordion-button accordion-product border-bottom px-0 font-18 bold collapsed"
                                             type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
                                             PRODUCT DETAILS
