--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -174,7 +174,7 @@
 
     </div>  -->
         <section class="my-5">
-            <h1 class="text-center text-orange my-3 font-40">Privacy Ploicy</h1>
+            <h1 class="text-center text-orange my-3 font-40">Privacy Policy</h1>
 
             <p class="font-26">Data protection is a matter of trust and your privacy is important to us. We shall
                 therefore only use your name and other information which relates to you in the manner set out in this
