Hero Banner Css and State Add

--- a/checkout.html
+++ b/checkout.html
@@ -200,6 +200,10 @@
                                 <input type="text" class="form-control" id="txtCity" required>
                             </div>
                             <div class="col-12">
+                                <label for="txtstate" class="form-label">State*</label>
+                                <input type="text" class="form-control" id="txtstate" required>
+                            </div>
+                            <div class="col-12">
                                 <label for="txtPin" class="form-label">Pincode*</label>
                                 <input type="text" class="form-control" id="txtPin" required>
                             </div>
