--- a/gaitonde.html
+++ b/gaitonde.html
@@ -170,7 +170,7 @@
     </header>
 
     <main>
-        <div class="bg-orange-10" style="height: 300px;">
+        <div class="bg-orange-10 row" style="height: 300px; background-repeat: no-repeat; background-size: cover">
 
         </div>
         <section class="my-5">
