--- a/product-page.html
+++ b/product-page.html
@@ -174,7 +174,7 @@
     </header>
 
     <main>
-        <div class="bg-orange-10" style="height: 300px;">
+        <div class="bg-orange-10 row" style="height: 300px; background-repeat: no-repeat; background-size: cover">
 
         </div>
 
@@ -253,13 +253,13 @@
                             <div class="accordion accordion-flush" id="accordionFlushExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button accordion-product border-bottom px-0 font-18 bold collapsed"
+                                        <button class="accordion-button accordion-product border-bottom px-0 font-18 bold"
                                             type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
                                             PRODUCT DETAILS
                                         </button>
                                     </h2>
-                                    <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    <div id="flush-collapseOne" class="accordion-collapse collapse show"
                                         data-bs-parent="#accordionFlushExample">
                                         <div class="accordion-body px-0">
                                             <span id="spnDescription"></span>
