--- a/products.html
+++ b/products.html
@@ -163,7 +163,7 @@
   </header>
 
   <main>
-    <div class="bg-orange-10 row" style="height: 300px;">
+    <div class="bg-orange-10 row"style="height: 300px; background-repeat: no-repeat; background-size: cover">
     </div>
     <section class="products">
       <h1 class="text-center text-orange my-3 font-60">Our Products</h1>
