--- a/checkout.html
+++ b/checkout.html
@@ -305,7 +305,7 @@
                                 <p id="spnCheakoutTotalAmount" class="text-orange bold"></p>
                             </div>
                         </div>
-                        <p class="text-orange py-1">Including ₹1,040.12 in taxes</p>
+                        <p class="text-orange py-1">Including all taxes</p>
                         <div class="d-grid">
                             <button type="submit" class="btn-2 button1  btn mb-3 font-30" id="btn_pay_now">Pay
                                 Now</button>
