--- a/products.html
+++ b/products.html
@@ -172,8 +172,8 @@
           <nav class="nav">
             <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts()">View All</a>
             <a class="nav-link" href="#" onclick="GetFilterProducts('CASUAL SHOES')">Shoes</a>
-            <a class="nav-link" href="#">Chappals</a>
-            <a class="nav-link" href="#">Loafers</a>
+            <a class="nav-link" href="#" onclick="GetFilterProducts('Chappals')">Chappals</a>
+            <a class="nav-link" href="#" onclick="GetFilterProducts('Loafers')">Loafers</a>
           </nav>
         </div>
 
