--- a/product-page.html
+++ b/product-page.html
@@ -175,7 +175,7 @@
     </header>
 
     <main>
-        <div class="bg-orange-10 row" style="height: 300px; background-repeat: no-repeat; background-size: cover">
+        <div class="bg-orange-10 row" style="height: 300px;">
 
         </div>
 
