--- a/products.html
+++ b/products.html
@@ -164,7 +164,7 @@
   </header>
 
   <main>
-    <div class="bg-orange-10 row"style="height: 300px; background-repeat: no-repeat; background-size: cover">
+    <div class="bg-orange-10 row"style="height: 300px;">
     </div>
     <section class="products">
       <h1 class="text-center text-orange my-3 font-60">Our Products</h1>
@@ -172,9 +172,9 @@
         <div>
           <nav class="nav">
             <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts()">View All</a>
-            <a class="nav-link" href="#" onclick="GetFilterProducts('CASUAL SHOES')">Shoes</a>
-            <a class="nav-link" href="#" onclick="GetFilterProducts('Chappals')">Chappals</a>
-            <a class="nav-link" href="#" onclick="GetFilterProducts('Loafers')">Loafers</a>
+            <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts('CASUAL SHOES')">Shoes</a>
+            <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts('Chappals')">Chappals</a>
+            <a class="nav-link" href="javascript:void(0);" onclick="GetFilterProducts('Loafers')">Loafers</a>
           </nav>
         </div>
 
@@ -214,7 +214,7 @@
       <div class="row" id="divProductList">
       </div>
     </section>
-    <section>
+    <section class="mb-5">
       <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
     </section>
   </main>
@@ -301,8 +301,8 @@
   <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL"
     domain="https://www.imprzd.com" api_type="scol" merchantdata="MTg=" imprzd_title_text="Customer Reviews"
     imprzd_title_font="Inter" imprzd_title_font_color="#DB4834" imprzd_title_font_size="50"
-    imprzd_title_font_weight="700" imprzd_button_text="VIEW MORE POSTS"
-    imprzd_button_url="https://gaitonde.com/testimonials.php" imprzd_button_color="#DB4834"
+    imprzd_title_font_weight="700" imprzd_button_text="View More Posts"
+    imprzd_button_url="testimonials.html" imprzd_button_color="#DB4834"
     imprzd_button_border_radius="10px" imprzd_button_font="Inter" imprzd_button_font_color="#FFF"
     imprzd_button_font_size="23" imprzd_button_font_weight="700" imprzd_post_title_font="Inter"
     imprzd_post_title_font_color="#DB4834" imprzd_post_title_font_size="24" imprzd_post_title_font_weight="700"
