--- a/testimonials.html
+++ b/testimonials.html
@@ -160,7 +160,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="mb-5">
             <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
         </section>
     </main>
