--- a/gaitonde.html
+++ b/gaitonde.html
@@ -171,7 +171,7 @@
     </header>
 
     <main>
-        <div class="bg-orange-10 row" style="height: 300px; background-repeat: no-repeat; background-size: cover">
+        <div class="bg-orange-10 row" style="height: 300px;">
 
         </div>
         <section class="my-5">
