--- a/cart.html
+++ b/cart.html
@@ -182,11 +182,11 @@
                         <div class="col d-flex flex-column justify-content-end align-items-end">
                             <div class="">
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <p class="text-orange me-4 semibold font-35">Shipping :</p>
+                                    <p class="text-orange me-4 semibold font-35">Shipping&nbsp;:</p>
                                     <p class="text-orange font-35">Free Shipping</p>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <p class="text-orange semibold font-35">Total : </p>
+                                    <p class="text-orange semibold font-35">Total&nbsp;: </p>
                                     <p class="text-orange font-35" id="spnCartTotalAmount"></p>
                                     <input type="hidden" id="hdnCartId">
                                 </div>
@@ -206,16 +206,16 @@
                     </div>
                     <div class="d-flex justify-content-between">
                         <div class="d-flex align-items-center">
-                            <img src="wwwroot/images/shipping-icon.svg">
-                            <p class="text-orange me-4 font-12 mb-0">Free Shipping</p>
+                            <img src="wwwroot/images/shipping-icon.svg" class="me-2">
+                            <p class="text-orange me-2 me-lg-4 font-10 mb-0">Free Shipping</p>
                         </div>
                         <div class="d-flex align-items-center">
-                            <img src="wwwroot/images/return-icon.svg">
-                            <p class="text-orange me-4 font-12 mb-0">7 Day Returns & Exchanges</p>
+                            <img src="wwwroot/images/return-icon.svg" class="me-2">
+                            <p class="text-orange me-2 me-lg-4 font-10 mb-0">7 Day Returns & Exchanges</p>
                         </div>
                         <div class="d-flex align-items-center">
-                            <img src="wwwroot/images/cod-icon.svg">
-                            <p class="text-orange me-4 font-12 mb-0">Cash on Delivery</p>
+                            <img src="wwwroot/images/cod-icon.svg" class="me-2">
+                            <p class="text-orange me-2 me-lg-4 font-10 mb-0">Cash on Delivery</p>
                         </div>
 
                     </div>
