--- a/product-page.html
+++ b/product-page.html
@@ -183,8 +183,7 @@
             <div class="row g-0 py-5">
                 <div class="col-12 col-lg-6 text-center">
                     <div class="mb-4">
-                        <img src="" class="rounded-0" alt="product-img" id="imgProductMainImage" height="500"
-                            width="500">
+                        <img src="" class="rounded-0 img-fluid" alt="product-img" id="imgProductMainImage">
                     </div>
                     <div class="gallery-wrap mb-4">
                         <img src="wwwroot/images/product-slider-backbtn.svg" id="backBtn" />
@@ -272,18 +271,19 @@
                         <div class="py-3">
                             <h5 class="text-orange text-uppercase font-16 bold">SHIPPING & RETURNS</h5>
                             <div class="d-flex justify-content-between">
-                                <div class="d-flex align-items-center gap-2">
-                                    <img src="wwwroot/images/shipping-icon.svg">
-                                    <p class="text-orange font-12 mb-0">Free Shipping</p>
+                                <div class="d-flex align-items-center">
+                                    <img src="wwwroot/images/shipping-icon.svg" class="me-2">
+                                    <p class="text-orange me-2 me-lg-4 font-10 mb-0">Free Shipping</p>
                                 </div>
-                                <div class="d-flex align-items-center gap-2">
-                                    <img src="wwwroot/images/return-icon.svg">
-                                    <p class="text-orange font-12 mb-0">7 Day Returns & Exchanges</p>
+                                <div class="d-flex align-items-center">
+                                    <img src="wwwroot/images/return-icon.svg" class="me-2">
+                                    <p class="text-orange me-2 me-lg-4 font-10 mb-0">7 Day Returns & Exchanges</p>
                                 </div>
-                                <div class="d-flex align-items-center gap-2">
-                                    <img src="wwwroot/images/cod-icon.svg">
-                                    <p class="text-orange font-12 mb-0">Cash on Delivery</p>
+                                <div class="d-flex align-items-center">
+                                    <img src="wwwroot/images/cod-icon.svg" class="me-2">
+                                    <p class="text-orange me-2 me-lg-4 font-10 mb-0">Cash on Delivery</p>
                                 </div>
+        
                             </div>
                         </div>
                     </div>
