fix some issues

--- a/product-page.html
+++ b/product-page.html
@@ -183,7 +183,7 @@
             <div class="row g-0 py-5">
                 <div class="col-12 col-lg-6 text-center">
                     <div class="mb-4">
-                        <img src="" class="rounded-0 img-fluid" alt="product-img" id="imgProductMainImage">
+                        <img src="" class="rounded-0 img-fluid" alt="product-img" id="imgProductMainImage" width="60%">
                     </div>
                     <div class="gallery-wrap mb-4">
                         <img src="wwwroot/images/product-slider-backbtn.svg" id="backBtn" />
