--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaitonde</title>
-    <link rel="icon" href="wwwroot/images/favicon.jpg" type="image/x-icon"/>
+    <link rel="icon" href="wwwroot/images/favicon.jpg" type="image/x-icon" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -211,19 +211,21 @@
                     <form class="row g-3 my-3" id="myForm">
                         <div class="col-12">
                             <label for="full_name" class="form-label">Full Name *</label>
-                            <input type="text" class="form-control" id="full_name" required>
+                            <input type="text" class="form-control" id="full_name" name="full_name" required>
                         </div>
                         <div class="col-12">
                             <label for="phone_number" class="form-label">Phone *</label>
-                            <input type="text" class="form-control" id="phone_number" maxlength="10" required>
+                            <input type="text" class="form-control" id="phone_number" name="phone_number" maxlength="10"
+                                required>
                         </div>
                         <div class="col-12">
                             <label for="email" class="form-label">Email *</label>
-                            <input type="text" class="form-control" id="email" required>
+                            <input type="text" class="form-control" id="email" name="email" required>
                         </div>
                         <div class="col-12">
                             <label for="message" class="form-label">Message *</label>
-                            <textarea type="text" class="form-control" id="message" rows="3" required></textarea>
+                            <textarea type="text" class="form-control" id="message" rows="3" name="message"
+                                required></textarea>
                         </div>
                         <div class="col-12 d-grid">
                             <button class="btn btn-2" type="button" id="btnContactUs">Submit</button>
@@ -247,13 +249,13 @@
                     <a class="nav-link font-12 px-2" href="faq.html">FAQ</a>
                     <a class="nav-link font-12 px-2" href="testimonials.html">Testimonials</a>
                     <!-- <a class="nav-link font-12 px-2" href="#">Sitemap</a> -->
-                    <!-- <a class="nav-link font-12 px-2" href="#">Disclaimer</a> -->   
+                    <!-- <a class="nav-link font-12 px-2" href="#">Disclaimer</a> -->
                 </nav>
             </div>
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Our&nbsp;Advantage</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" >Genuine Leather Shoes</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Shoes</a>
                     <a class="nav-link font-12 px-2">Genuine Leather Accessories</a>
                     <a class="nav-link font-12 px-2">Genuine Leather Sandals</a>
                     <a class="nav-link font-12 px-2">Genuine Leather Chappals</a>
@@ -281,10 +283,16 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" ><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://api.whatsapp.com/send/?phone=919790704282&text&type=phone_number&app_absent=0"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2"><img
+                            src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2"
+                        href="https://api.whatsapp.com/send/?phone=919790704282&text&type=phone_number&app_absent=0"><img
+                            src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2"
+                        href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img>
+                        domestic@gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img
+                            src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
                 </nav>
             </div>
         </div>
@@ -295,13 +303,16 @@
                     <div class="d-flex align-items-center">
                         <p class="text-white mb-0 p-2">
                             Follow Us
-                            <a href="https://www.facebook.com/gaitonde.shoe/"><img src="wwwroot/images/footer-facebook-icon.svg"  alt="facbook-icon"></a>
+                            <a href="https://www.facebook.com/gaitonde.shoe/"><img
+                                    src="wwwroot/images/footer-facebook-icon.svg" alt="facbook-icon"></a>
                             <!-- <a><img src="wwwroot/images/footer-twitter-icon.svg" alt="twitter-icon"></a> -->
-                            <a href="https://www.instagram.com/gaitonde_shoes/"><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
+                            <a href="https://www.instagram.com/gaitonde_shoes/"><img
+                                    src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
                         </p>
                     </div>
                     <div>
-                        <p class="text-white mb-0 p-2">© 2024, All rights reserved by Gaitonde Leathers and Accessories Private Limited</p>
+                        <p class="text-white mb-0 p-2">© 2024, All rights reserved by Gaitonde Leathers and Accessories
+                            Private Limited</p>
                     </div>
                     <div>
                         <p class="mb-0 p-2 text-white">
@@ -321,8 +332,72 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.20.0/jquery.validate.min.js"
+        integrity="sha512-WMEKGZ7L5LWgaPeJtw9MBM4i5w5OSBlSjTjCtSnvFJGSVD26gE5+Td12qN5pvWXhuWaWcVwF++F7aqu9cvqP0A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="wwwroot/js/appsetting.js"></script>
+
+    <script>
+
+    </script>
+    <!-- <script>
+    $(documet).ready(function (){
+        $("#myForm").validate({
+        rules: {
+            full_name: {
+                required: true,
+            },
+            phone_number: {
+                required: true,
+                digits: true
+            },
+            email: {
+                required: true,
+                email: true
+            },
+            message: {
+                required: true,
+            },
+            
+            // Add other rules for firstname, lastname, email, etc.
+        },
+        messages: {
+            full_name: {
+                required: "Please enter a Name",
+            },
+            phone_number: {
+                required: "Please enter a Last Name",
+            },
+            email: {
+                required: "Please enter a Valid Address",
+            },
+            message: {
+                required: "Please enter a City Name",
+            },
+            
+            // Add other messages
+        },
+    });
+
+    })
+
+    $("#btnContactUs").click(function () {
+
+        if (!$("#myForm").valid()) {
+        return;
+    }
+
+        Swal.fire({
+            title: "Submited!",
+            icon: "success",
+            confirmButtonColor: "#DB4834",
+        });
+    });
+</script> -->
 </body>
 
 </html>
