--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol"
             merchantdata="MTg="
             imprzd_title_text="Customer Reviews"
-            imprzd_title_font="Inter"
+            imprzd_title_font="Roboto Flex"
             imprzd_title_font_color="#DB4834"
             imprzd_title_font_size="50"
             imprzd_title_font_weight="700"
@@ -335,7 +335,7 @@
             imprzd_button_url="testimonials.html"
             imprzd_button_color="#DB4834"
             imprzd_button_border_radius="10px"
-            imprzd_button_font="Inter"
+            imprzd_button_font="Roboto Flex"
             imprzd_button_font_color="#FFF"
             imprzd_button_font_size="23"
             imprzd_button_font_weight="700"
