--- a/testimonials.html
+++ b/testimonials.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="wwwroot/css/styles.css">
+    <!--wall of love widget-->
+    <link rel="stylesheet" href="https://www.imprzd.com/bi/WOL-beta/imprzd_wol_styles.css">
 </head>
 <body>
     <header>
@@ -160,9 +162,11 @@
     </header>
 
     <main>
-        <section class="mb-5">
+        <!-- <section class="mb-5">
             <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
-        </section>
+        </section> -->
+        <section id="imprzdWol"></section>
+
     </main>
 
     <footer>
@@ -244,36 +248,36 @@
         </div>
     </footer>
 
-    <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol"
-            merchantdata="MTg="
-            imprzd_title_text="Customer Reviews"
-            imprzd_title_font="Inter"
-            imprzd_title_font_color="#DB4834"
-            imprzd_title_font_size="50"
-            imprzd_title_font_weight="700"
-            imprzd_button_text="VIEW MORE POSTS"
-            imprzd_button_url="https://gaitonde.com/testimonials.php"
-            imprzd_button_color="#DB4834"
-            imprzd_button_border_radius="10px"
-            imprzd_button_font="Inter"
-            imprzd_button_font_color="#FFF"
-            imprzd_button_font_size="23"
-            imprzd_button_font_weight="700"
-            imprzd_post_title_font="Inter"
-            imprzd_post_title_font_color="#DB4834"
-            imprzd_post_title_font_size="24"
-            imprzd_post_title_font_weight="700"
-            imprzd_post_desc_font="Inter"
-            imprzd_post_desc_font_color="#201D1D"
-            imprzd_post_desc_font_size="16"
-            imprzd_post_desc_font_weight="400"
-            imprzd_container_color="#FFF"
-            imprzd_container_shadow_color="#ffffffaf"
-            google_font_link="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-            display_customer_name="true"
-            display_product_name="true"
-            display_posted_date="true"
-            display_shared_channel="true"></script>
+
+
+    <script 
+        src="https://www.imprzd.com/bi/WOL-beta/imprzd_wol_script.js"
+        id="imprzd_WOL"
+        merchant="MTg=" 
+        hero_title="Hear from our happy customers"
+        hero_desc="Take a look at the stories of comfort, style & elegance from our loyal customers. Join them and experience the luxury of Gaitonde"
+        hero_media="https://i.postimg.cc/vmky271M/fdec68e9ffe6c567f8d88e1aa40a7f25.jpg"
+        hero_bg_color="#E8E8E8"
+        hero_title_font="Roboto Flex" 
+        hero_title_font_color="#DB4834" 
+        hero_title_font_size="36px"
+        hero_title_font_weight="700" 
+        hero_desc_font="Roboto Flex" 
+        hero_desc_font_color="#160504" 
+        hero_desc_font_size="20px" 
+        hero_desc_font_weight="400" 
+        subtitle_font="Roboto Flex" 
+        subtitle_font_weight="600" 
+        subtitle_font_color="#160504" 
+        subtitle_font_size="20px"
+        text_font="Roboto Flex" 
+        text_weight="400" 
+        text_size="16px" 
+        container_color="#FFFFFF" 
+        container_shadow_color="#000000" 
+        page_bg_color="#FFFFFF" 
+        primary_accent_color="#DB4834">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
