--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                             <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
                         </a> -->
                         <a href="cart.html" class="btn p-0 position-relative">
-                            <span id="spnCartCount" class="position-absolute translate-middle badge rounded-circle bg-orange-60" style="left: 38px; top: 8px;">
+                            <span id="spnCartCount"
+                                class="position-absolute translate-middle badge rounded-circle bg-orange-60"
+                                style="left: 38px; top: 8px;">
                             </span>
                             <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
                         </a>
