--- a/products.html
+++ b/products.html
@@ -59,12 +59,12 @@
           </ul>
           <div class="position-relative d-flex justify-content-center align-items-center me-0">
             <a href="cart.html" class="btn p-0 position-relative">
-              <span id="spnCartCount" class="position-absolute translate-middle badge rounded-circle bg-orange-60"
-                style="left: 38px; top: 8px;">
-
+              <span id="spnCartCount"
+                  class="position-absolute translate-middle badge rounded-circle bg-orange-60"
+                  style="left: 38px; top: 8px;">
               </span>
               <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
-            </a>
+          </a>
             <!-- <a href="cart.html">
                         <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
                     </a> -->
