--- a/product-page.html
+++ b/product-page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaitonde</title>
-    <link rel="icon" href="wwwroot/images/favicon.jpg" type="image/x-icon"/>
+    <link rel="icon" href="wwwroot/images/favicon.jpg" type="image/x-icon" />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -220,21 +220,20 @@
                             <div class="d-flex justify-content-between">
                                 <p class="text-orange font-14 bold text-uppercase">Size(UK):</p>
                                 <!-- <p class="text-orange font-14 bold text-uppercase d-flex">SIZE GUIDE&nbsp;&nbsp; -->
-                                    <!-- <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                <!-- <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <rect width="20" height="20" rx="10" fill="#DB4834" /> -->
-                                        <g clip-path="url(#clip0_312_1171)">
-                                            <path
-                                                d="M9.44078 11.3915C9.44078 11.129 9.48203 10.8965 9.56453 10.694C9.65453 10.4915 9.76328 10.3115 9.89078 10.154C10.0258 9.99648 10.1683 9.85023 10.3183 9.71523C10.4683 9.58023 10.607 9.45273 10.7345 9.33273C10.8695 9.20523 10.9783 9.07398 11.0608 8.93898C11.1508 8.80398 11.1958 8.65398 11.1958 8.48898C11.1958 8.21898 11.0833 8.00148 10.8583 7.83648C10.6408 7.67148 10.3483 7.58898 9.98078 7.58898C9.62828 7.58898 9.31328 7.66398 9.03578 7.81398C8.75828 7.95648 8.52953 8.15898 8.34953 8.42148L6.98828 7.62273C7.28828 7.16523 7.70453 6.80148 8.23703 6.53148C8.76953 6.25398 9.41453 6.11523 10.172 6.11523C10.7345 6.11523 11.2295 6.19773 11.657 6.36273C12.0845 6.52023 12.4183 6.75273 12.6583 7.06023C12.9058 7.36773 13.0295 7.74648 13.0295 8.19648C13.0295 8.48898 12.9845 8.74773 12.8945 8.97273C12.8045 9.19773 12.6883 9.39273 12.5458 9.55773C12.4033 9.72273 12.2495 9.87648 12.0845 10.019C11.927 10.1615 11.777 10.3002 11.6345 10.4352C11.492 10.5702 11.372 10.7127 11.2745 10.8627C11.1845 11.0127 11.1395 11.189 11.1395 11.3915H9.44078ZM10.2958 14.2152C9.98078 14.2152 9.72203 14.114 9.51953 13.9115C9.31703 13.709 9.21578 13.469 9.21578 13.1915C9.21578 12.9065 9.31703 12.6702 9.51953 12.4827C9.72203 12.2877 9.98078 12.1902 10.2958 12.1902C10.6183 12.1902 10.877 12.2877 11.072 12.4827C11.2745 12.6702 11.3758 12.9065 11.3758 13.1915C11.3758 13.469 11.2745 13.709 11.072 13.9115C10.877 14.114 10.6183 14.2152 10.2958 14.2152Z"
-                                                fill="white" />
-                                        </g>
-                                        <defs>
-                                            <clipPath id="clip0_312_1171">
-                                                <rect width="9" height="9" fill="white"
-                                                    transform="translate(5.5 5.5)" />
-                                            </clipPath>
-                                        </defs>
-                                    </svg>
+                                <g clip-path="url(#clip0_312_1171)">
+                                    <path
+                                        d="M9.44078 11.3915C9.44078 11.129 9.48203 10.8965 9.56453 10.694C9.65453 10.4915 9.76328 10.3115 9.89078 10.154C10.0258 9.99648 10.1683 9.85023 10.3183 9.71523C10.4683 9.58023 10.607 9.45273 10.7345 9.33273C10.8695 9.20523 10.9783 9.07398 11.0608 8.93898C11.1508 8.80398 11.1958 8.65398 11.1958 8.48898C11.1958 8.21898 11.0833 8.00148 10.8583 7.83648C10.6408 7.67148 10.3483 7.58898 9.98078 7.58898C9.62828 7.58898 9.31328 7.66398 9.03578 7.81398C8.75828 7.95648 8.52953 8.15898 8.34953 8.42148L6.98828 7.62273C7.28828 7.16523 7.70453 6.80148 8.23703 6.53148C8.76953 6.25398 9.41453 6.11523 10.172 6.11523C10.7345 6.11523 11.2295 6.19773 11.657 6.36273C12.0845 6.52023 12.4183 6.75273 12.6583 7.06023C12.9058 7.36773 13.0295 7.74648 13.0295 8.19648C13.0295 8.48898 12.9845 8.74773 12.8945 8.97273C12.8045 9.19773 12.6883 9.39273 12.5458 9.55773C12.4033 9.72273 12.2495 9.87648 12.0845 10.019C11.927 10.1615 11.777 10.3002 11.6345 10.4352C11.492 10.5702 11.372 10.7127 11.2745 10.8627C11.1845 11.0127 11.1395 11.189 11.1395 11.3915H9.44078ZM10.2958 14.2152C9.98078 14.2152 9.72203 14.114 9.51953 13.9115C9.31703 13.709 9.21578 13.469 9.21578 13.1915C9.21578 12.9065 9.31703 12.6702 9.51953 12.4827C9.72203 12.2877 9.98078 12.1902 10.2958 12.1902C10.6183 12.1902 10.877 12.2877 11.072 12.4827C11.2745 12.6702 11.3758 12.9065 11.3758 13.1915C11.3758 13.469 11.2745 13.709 11.072 13.9115C10.877 14.114 10.6183 14.2152 10.2958 14.2152Z"
+                                        fill="white" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_312_1171">
+                                        <rect width="9" height="9" fill="white" transform="translate(5.5 5.5)" />
+                                    </clipPath>
+                                </defs>
+                                </svg>
                                 </p>
                             </div>
                             <div class="product-size-radios" id="divSizeList">
@@ -253,7 +252,8 @@
                             <div class="accordion accordion-flush" id="accordionFlushExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button accordion-product border-bottom px-0 font-18 bold"
+                                        <button
+                                            class="accordion-button accordion-product border-bottom px-0 font-18 bold"
                                             type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
                                             PRODUCT DETAILS
@@ -283,7 +283,7 @@
                                     <img src="wwwroot/images/cod-icon.svg" class="me-2">
                                     <p class="text-orange me-2 me-lg-4 font-10 mb-0">Cash on Delivery</p>
                                 </div>
-        
+
                             </div>
                         </div>
                     </div>
@@ -463,13 +463,13 @@
                     <a class="nav-link font-12 px-2" href="faq.html">FAQ</a>
                     <a class="nav-link font-12 px-2" href="testimonials.html">Testimonials</a>
                     <!-- <a class="nav-link font-12 px-2" href="#">Sitemap</a> -->
-                    <!-- <a class="nav-link font-12 px-2" href="#">Disclaimer</a> -->   
+                    <!-- <a class="nav-link font-12 px-2" href="#">Disclaimer</a> -->
                 </nav>
             </div>
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Our&nbsp;Advantage</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link font-12 px-2" >Genuine Leather Shoes</a>
+                    <a class="nav-link font-12 px-2">Genuine Leather Shoes</a>
                     <a class="nav-link font-12 px-2">Genuine Leather Accessories</a>
                     <a class="nav-link font-12 px-2">Genuine Leather Sandals</a>
                     <a class="nav-link font-12 px-2">Genuine Leather Chappals</a>
@@ -497,10 +497,16 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" ><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://api.whatsapp.com/send/?phone=919790704282&text&type=phone_number&app_absent=0"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2"><img
+                            src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2"
+                        href="https://api.whatsapp.com/send/?phone=919790704282&text&type=phone_number&app_absent=0"><img
+                            src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2"
+                        href="mailto:domestic@gaitonde.com"><img src="wwwroot/images/footer-mail-icon.svg"></img>
+                        domestic@gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="https://gaitonde.com/"><img
+                            src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
                 </nav>
             </div>
         </div>
@@ -511,13 +517,16 @@
                     <div class="d-flex align-items-center">
                         <p class="text-white mb-0 p-2">
                             Follow Us
-                            <a href="https://www.facebook.com/gaitonde.shoe/"><img src="wwwroot/images/footer-facebook-icon.svg"  alt="facbook-icon"></a>
+                            <a href="https://www.facebook.com/gaitonde.shoe/"><img
+                                    src="wwwroot/images/footer-facebook-icon.svg" alt="facbook-icon"></a>
                             <!-- <a><img src="wwwroot/images/footer-twitter-icon.svg" alt="twitter-icon"></a> -->
-                            <a href="https://www.instagram.com/gaitonde_shoes/"><img src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
+                            <a href="https://www.instagram.com/gaitonde_shoes/"><img
+                                    src="wwwroot/images/footer-instagram-icon.svg" alt="instagram-icon"></a>
                         </p>
                     </div>
                     <div>
-                        <p class="text-white mb-0 p-2">© 2024, All rights reserved by Gaitonde Leathers and Accessories Private Limited</p>
+                        <p class="text-white mb-0 p-2">© 2024, All rights reserved by Gaitonde Leathers and Accessories
+                            Private Limited</p>
                     </div>
                     <div>
                         <p class="mb-0 p-2 text-white">
@@ -574,6 +583,10 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"
         integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.20.0/jquery.validate.min.js"
+        integrity="sha512-WMEKGZ7L5LWgaPeJtw9MBM4i5w5OSBlSjTjCtSnvFJGSVD26gE5+Td12qN5pvWXhuWaWcVwF++F7aqu9cvqP0A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="wwwroot/js/product-detail.js"></script>
     <script src="wwwroot/js/appsetting.js"></script>
