New Changes Done

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -200,6 +200,13 @@
 
     </main>
 
+    <div class="icon-bar">
+        <a>
+          <img src="wwwroot/images/free_shipping.png" class="side-flt-img">
+        </a>
+    </div>
+
+
     <footer>
         <div class="row bg-orange-20 p-4 g-0">
             <div class="col-12 col-lg-2">
